[tool.poetry]
name = "hw-12-2"
version = "0.1.0"
description = ""
authors = ["ageev <agvilya@gmail.com>"]
readme = "README.md"
packages = [{include = "hw_12"}]

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.30.0"
attrs = "22.2.0"
colorama = "0.4.6"
iniconfig = "2.0.0"
packaging = "23.0"
pluggy = "1.0.0"


[tool.poetry.group.dev.dependencies]
pytest = "7.2.1"
coverage = "7.0.5"
pytest-cov = "4.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
